@@ -2003,6 +2003,11 @@ name|tblPath
 init|=
 literal|null
 decl_stmt|;
+name|Table
+name|tbl
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 name|getMS
@@ -2012,16 +2017,15 @@ name|openTransaction
 argument_list|()
 expr_stmt|;
 comment|// drop any partitions
-name|Table
 name|tbl
-init|=
+operator|=
 name|get_table
 argument_list|(
 name|dbname
 argument_list|,
 name|name
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 name|tbl
@@ -2137,6 +2141,12 @@ name|tblPath
 operator|!=
 literal|null
 operator|)
+operator|&&
+operator|!
+name|isExternal
+argument_list|(
+name|tbl
+argument_list|)
 condition|)
 block|{
 name|wh
@@ -2151,6 +2161,63 @@ expr_stmt|;
 comment|// ok even if the data is not deleted
 block|}
 block|}
+block|}
+specifier|private
+name|boolean
+name|isExternal
+parameter_list|(
+name|Table
+name|table
+parameter_list|)
+block|{
+if|if
+condition|(
+name|table
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+name|params
+init|=
+name|table
+operator|.
+name|getParameters
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|params
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+return|return
+literal|"TRUE"
+operator|.
+name|equalsIgnoreCase
+argument_list|(
+name|params
+operator|.
+name|get
+argument_list|(
+literal|"EXTERNAL"
+argument_list|)
+argument_list|)
+return|;
 block|}
 specifier|public
 name|Table
