@@ -27,7 +27,7 @@ name|java
 operator|.
 name|util
 operator|.
-name|List
+name|Properties
 import|;
 end_import
 
@@ -83,32 +83,22 @@ argument_list|,
 name|conf_
 argument_list|)
 decl_stmt|;
-block|{
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|tables
-init|=
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
 name|db
 operator|.
 name|getTables
 argument_list|(
 literal|".+"
 argument_list|)
-decl_stmt|;
-comment|//            System.err.println("tables=" + tables);
-name|assertTrue
-argument_list|(
-name|tables
 operator|.
 name|size
 argument_list|()
-operator|==
-literal|0
 argument_list|)
 expr_stmt|;
-block|}
+comment|//drop and delete data
 name|Table
 name|bar1
 init|=
@@ -130,63 +120,138 @@ argument_list|,
 name|conf_
 argument_list|)
 decl_stmt|;
-block|{
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|tables
-init|=
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
 name|db
 operator|.
 name|getTables
 argument_list|(
 literal|".+"
 argument_list|)
-decl_stmt|;
-comment|//            System.err.println("tables=" + tables);
-name|assertTrue
-argument_list|(
-name|tables
 operator|.
 name|size
 argument_list|()
-operator|==
-literal|1
 argument_list|)
 expr_stmt|;
-block|}
 name|bar1
 operator|.
 name|drop
 argument_list|()
 expr_stmt|;
-block|{
-name|List
-argument_list|<
-name|String
-argument_list|>
-name|tables
-init|=
+name|assertFalse
+argument_list|(
+name|fileSys_
+operator|.
+name|exists
+argument_list|(
+name|bar1
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
 name|db
 operator|.
 name|getTables
 argument_list|(
 literal|".+"
 argument_list|)
-decl_stmt|;
-comment|//            System.err.println("tables=" + tables);
-name|assertTrue
-argument_list|(
-name|tables
 operator|.
 name|size
 argument_list|()
-operator|==
-literal|0
 argument_list|)
 expr_stmt|;
-block|}
+comment|//drop and don't delete the data, external table
+name|Properties
+name|schema2
+init|=
+name|createSchema
+argument_list|(
+literal|"foo2"
+argument_list|,
+literal|"bar2"
+argument_list|)
+decl_stmt|;
+name|schema2
+operator|.
+name|setProperty
+argument_list|(
+literal|"EXTERNAL"
+argument_list|,
+literal|"TRUE"
+argument_list|)
+expr_stmt|;
+name|Table
+name|bar2
+init|=
+name|Table
+operator|.
+name|create
+argument_list|(
+name|db
+argument_list|,
+literal|"bar2"
+argument_list|,
+name|schema2
+argument_list|,
+name|conf_
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|db
+operator|.
+name|getTables
+argument_list|(
+literal|".+"
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|bar2
+operator|.
+name|drop
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|fileSys_
+operator|.
+name|exists
+argument_list|(
+name|bar2
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|db
+operator|.
+name|getTables
+argument_list|(
+literal|".+"
+argument_list|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|cleanup
 argument_list|()
 expr_stmt|;
