@@ -65,6 +65,34 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|fs
+operator|.
+name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hive
 operator|.
 name|conf
@@ -2459,18 +2487,62 @@ argument_list|,
 literal|"1"
 argument_list|)
 expr_stmt|;
-name|tbl
+name|tbl2
 operator|.
 name|setTableName
 argument_list|(
 name|tblName2
 argument_list|)
 expr_stmt|;
+name|tbl2
+operator|.
+name|setParameters
+argument_list|(
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|String
+argument_list|>
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tbl2
+operator|.
+name|getParameters
+argument_list|()
+operator|.
+name|put
+argument_list|(
+literal|"EXTERNAL"
+argument_list|,
+literal|"TRUE"
+argument_list|)
+expr_stmt|;
+name|tbl2
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|setLocation
+argument_list|(
+name|tbl
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getLocation
+argument_list|()
+operator|+
+literal|"-2"
+argument_list|)
+expr_stmt|;
 name|client
 operator|.
 name|createTable
 argument_list|(
-name|tbl
+name|tbl2
 argument_list|)
 expr_stmt|;
 name|Table
@@ -2568,7 +2640,7 @@ operator|.
 name|getLocation
 argument_list|()
 argument_list|,
-name|tbl
+name|tbl2
 operator|.
 name|getSd
 argument_list|()
@@ -2639,6 +2711,16 @@ literal|0
 operator|)
 argument_list|)
 expr_stmt|;
+name|FileSystem
+name|fs
+init|=
+name|FileSystem
+operator|.
+name|get
+argument_list|(
+name|hiveConf
+argument_list|)
+decl_stmt|;
 name|client
 operator|.
 name|dropTable
@@ -2648,6 +2730,26 @@ argument_list|,
 name|tblName
 argument_list|)
 expr_stmt|;
+name|assertFalse
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|tbl
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getLocation
+argument_list|()
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|client
 operator|.
 name|dropTable
@@ -2655,6 +2757,26 @@ argument_list|(
 name|dbName
 argument_list|,
 name|tblName2
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|fs
+operator|.
+name|exists
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|tbl2
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getLocation
+argument_list|()
+argument_list|)
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|ret
